# elasticsearchdemo

./: docker-compose.yml  pyproject.toml  readme.adoc
app/: db.sqlite3
app/blog/: documents.py  models.py  serializers.py  views.py
app/blog/management/commands/: populate_db.py
app/blog/migrations/: 0001_initial.py
app/core/: settings.py  urls.py
app/search/: views.py
