[tool.poetry]
name = "elasticsearchapp"
version = "0.1.0"
description = ""
authors = ["Daniel Ale <danielale9291@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
djangorestframework = "^3.14.0"
markdown = "^3.4.4"
django-filter = "^23.2"
elasticsearch = "7.14.0"
elasticsearch-dsl = "^7.4.1"
django-elasticsearch-dsl = "^7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
